--- a/seahawks.html
+++ b/seahawks.html
@@ -20,11 +20,21 @@ body {
 
 
 <body>
+<script src="http://code.jquery.com/jquery-1.10.2.js"></script> 
+
+<script src="http://code.jquery.com/ui/1.11.1/jquery-ui.js"></script>
+
+
+<p>Date Range</p>            
+	<div id="date" ></div>    
+	<label for="dateRange">Date:</label>        
+    <input type="text" id="dateRange" readonly style="border:0; color:#f6931f; font-weight:bold;">
 
 <script src="http://d3js.org/d3.v3.min.js"></script>
+
+
+
 <script src="seahawks.js"></script>
-
-
 
 
 </body>
