--- a/seahawks.html
+++ b/seahawks.html
@@ -27,6 +27,8 @@ body {
 <script src="http://code.jquery.com/jquery-1.10.2.js"></script> 
 
 <script src="http://code.jquery.com/ui/1.11.1/jquery-ui.js"></script>
+
+<link rel="stylesheet" href="http://code.jquery.com/ui/1.9.0/themes/base/jquery-ui.css" />
  
 <link href='http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css' rel='stylesheet' type='text/css'>
 
