--- a/seahawks.html
+++ b/seahawks.html
@@ -24,6 +24,7 @@ body {
 
 
 <body>
+
 <script src="http://code.jquery.com/jquery-1.10.2.js"></script> 
 
 <script src="http://code.jquery.com/ui/1.11.1/jquery-ui.js"></script>
@@ -32,16 +33,13 @@ body {
  
 <link href='http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css' rel='stylesheet' type='text/css'>
 
+<h1> "Seattle Seahawks" Google Search Popularity</h1>
 
-<p>Date Range</p>            
+<h3>Date Range:</h3>            
 	   
-	<label for="dateRange">Date:</label> 
-
-
-
+    <div id="date" class"slider-range"></div> 
     <input type="text" id="dateRange" readonly style="border:0; color:#f6931f; font-weight:bold;" size='600'>
 
-    <div id="date" class"slider-range"></div> 
 
    
 
