filter by search

--- a/seahawks.html
+++ b/seahawks.html
@@ -40,7 +40,10 @@ body {
     <div id="date" class"slider-range"></div> 
     <input type="text" id="dateRange" readonly style="border:0; color:#f6931f; font-weight:bold;" size='600'>
 
-
+<h3>Search Amount:</h3>            
+     
+    <div id="amount" class"slider-range"></div> 
+    <input type="text" id="searchAmount" readonly style="border:0; color:#f6931f; font-weight:bold;" size='600'>
    
 
 <script src="http://d3js.org/d3.v3.min.js"></script>
