--- a/seahawks.html
+++ b/seahawks.html
@@ -20,6 +20,26 @@ body {
 	width: 1000;
 }
 
+#instructions {
+  font:15px sans-serif;
+  text-align: right;
+  padding-right: 100px;
+  
+}
+
+
+div.tooltip {
+    position: absolute;
+    width: 300px;
+    height: 50px;
+    padding: 2px;
+    font: 12px sans-serif;
+
+    border: 0px;
+    border-radius: 8px;
+    pointer-events: none;
+}
+
 </style>
 
 
@@ -44,6 +64,8 @@ body {
      
     <div id="amount" class"slider-range"></div> 
     <input type="text" id="searchAmount" readonly style="border:0; color:#f6931f; font-weight:bold;" size='600'>
+
+ <h3 id="instructions">Click on the line to view data values</h3>
    
 
 <script src="http://d3js.org/d3.v3.min.js"></script>
